add user activation handler
